; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/extr_tx_tso.c_tso_get_fragment.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/extr_tx_tso.c_tso_get_fragment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tso_state = type { i32, i32, i8*, i8* }
%struct.efx_nic = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tso_state*, %struct.efx_nic*, i32*)* @tso_get_fragment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tso_get_fragment(%struct.tso_state* %0, %struct.efx_nic* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.tso_state*, align 8
  %6 = alloca %struct.efx_nic*, align 8
  %7 = alloca i32*, align 8
  store %struct.tso_state* %0, %struct.tso_state** %5, align 8
  store %struct.efx_nic* %1, %struct.efx_nic** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load %struct.efx_nic*, %struct.efx_nic** %6, align 8
  %9 = getelementptr inbounds %struct.efx_nic, %struct.efx_nic* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32*, i32** %7, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i8* @skb_frag_size(i32* %13)
  %15 = load i32, i32* @DMA_TO_DEVICE, align 4
  %16 = call i32 @skb_frag_dma_map(i32* %11, i32* %12, i32 0, i8* %14, i32 %15)
  %17 = load %struct.tso_state*, %struct.tso_state** %5, align 8
  %18 = getelementptr inbounds %struct.tso_state, %struct.tso_state* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = load %struct.efx_nic*, %struct.efx_nic** %6, align 8
  %20 = getelementptr inbounds %struct.efx_nic, %struct.efx_nic* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load %struct.tso_state*, %struct.tso_state** %5, align 8
  %24 = getelementptr inbounds %struct.tso_state, %struct.tso_state* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @dma_mapping_error(i32* %22, i32 %25)
  %27 = icmp ne i32 %26, 0
  %28 = xor i1 %27, true
  %29 = zext i1 %28 to i32
  %30 = call i64 @likely(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %46

32:                                               ; preds = %3
  %33 = load i32*, i32** %7, align 8
  %34 = call i8* @skb_frag_size(i32* %33)
  %35 = load %struct.tso_state*, %struct.tso_state** %5, align 8
  %36 = getelementptr inbounds %struct.tso_state, %struct.tso_state* %35, i32 0, i32 3
  store i8* %34, i8** %36, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = call i8* @skb_frag_size(i32* %37)
  %39 = load %struct.tso_state*, %struct.tso_state** %5, align 8
  %40 = getelementptr inbounds %struct.tso_state, %struct.tso_state* %39, i32 0, i32 2
  store i8* %38, i8** %40, align 8
  %41 = load %struct.tso_state*, %struct.tso_state** %5, align 8
  %42 = getelementptr inbounds %struct.tso_state, %struct.tso_state* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load %struct.tso_state*, %struct.tso_state** %5, align 8
  %45 = getelementptr inbounds %struct.tso_state, %struct.tso_state* %44, i32 0, i32 1
  store i32 %43, i32* %45, align 4
  store i32 0, i32* %4, align 4
  br label %49

46:                                               ; preds = %3
  %47 = load i32, i32* @ENOMEM, align 4
  %48 = sub nsw i32 0, %47
  store i32 %48, i32* %4, align 4
  br label %49

49:                                               ; preds = %46, %32
  %50 = load i32, i32* %4, align 4
  ret i32 %50
}

declare dso_local i32 @skb_frag_dma_map(i32*, i32*, i32, i8*, i32) #1

declare dso_local i8* @skb_frag_size(i32*) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @dma_mapping_error(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
